<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@color/colorPrimary"
        tools:context=".NewContact">

    <TextView
            android:id="@+id/title_new_contact"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_new_contact"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"
            tools:layout_editor_absoluteX="42dp"
            android:id="@+id/textInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/text_input_first_name"
                android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout2">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/text_input_last_name"
                android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            android:id="@+id/textInputLayout5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/text_input_alias"
                android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            android:id="@+id/textInputLayout3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_telephone"
                android:inputType="number"
                android:maxLength="14"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:id="@+id/textInputLayout4">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_phone"
                android:inputType="number"
                android:maxLength="14"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/text_input_address"
                android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_save"
            android:text="@string/text_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_cancel"
            android:text="@string/text_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>