<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        tools:context=".ViewContact">

    <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="38sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" android:layout_marginTop="24dp"/>

    <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_call_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name"
            android:id="@+id/imageView" android:contentDescription="@string/text_input_phone"/>

    <TextView
            android:id="@+id/text_view_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textSize="28sp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="64dp"/>

    <LinearLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_telephone">

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                android:contentDescription="@string/text_input_telephone"/>

        <TextView
                android:id="@+id/text_view_phone"
                android:layout_marginStart="24dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_phone">

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_place_black_24dp" android:contentDescription="@string/text_input_address"/>

        <TextView
                android:id="@+id/text_view_address"
                android:layout_marginStart="24dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

    </LinearLayout>

    <Button
            android:id="@+id/button_call"
            android:text="@string/text_button_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <Button
            android:id="@+id/button_back"
            android:text="@string/text_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>